--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,4 +35,6 @@ jobs:
         rm -rf ../.west
         west init -l .
         west update
+        export ZEPHYR_TOOLCHAIN_VARIANT=zephyr
+        west zephyr-export
         ./scripts/test
