Major cleanup of octave files
- Remove stray spaces to make PRs easier
- Add robot tests for spdx license

Closes #4 

Signed-off-by: Martin Schröder <info@swedishembedded.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,5 +22,6 @@ build:
         - rm -rf ../.west
         - west init -l .
         - west update
+        - ./scripts/check
         - ./scripts/test
 
