--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,4 +38,5 @@ jobs:
         # make sure we have sdk exported into the environment
         /opt/toolchains/zephyr-sdk-0.14.2/setup.sh -t all -h -c
         west zephyr-export
+        ./scripts/check
         ./scripts/test
