fix: Remove pushd
Pushd not found on the docker image. Needs to be fixed on the docker
image side. Removing for now.

Signed-off-by: Martin Schröder <info@swedishembedded.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,6 @@ build:
         - rm -rf ../.west
         - west init -l .
         - west update
-        - mkdir build && pushd build && cmake .. && make && popd
+        - mkdir build && cd build && cmake .. && make && cd ..
         - ./scripts/check
         - ./scripts/test
