--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
         rm -rf ../.west
         west init -l .
         west update
-        mkdir build && pushd build && cmake .. && make && popd
+        mkdir build && cd build && cmake .. && make && cd ..
         # make sure we have sdk exported into the environment
         /opt/toolchains/zephyr-sdk-0.14.2/setup.sh -t all -h -c
         west zephyr-export
