--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,14 +13,15 @@ build:
     stage: build
     artifacts:
         paths:
-            - build-tests/coverage*
+            - build/*.deb
         expire_in: 1 week
         when: always
     rules:
         - if: $CI_PIPELINE_SOURCE == "merge_request_event"
     script:
-        - rm -rf ../.west
-        - west init -l .
-        - west update
-        - ./scripts/test
-
+        - mkdir build && \
+          cd build && \
+          cmake .. && \
+          make && \
+          cpack && \
+          cd ..
