--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,15 +13,23 @@ build:
     stage: build
     artifacts:
         paths:
-            - build-tests/coverage*
+            - build/index.pdf
         expire_in: 1 week
         when: always
     rules:
         - if: $CI_PIPELINE_SOURCE == "merge_request_event"
     script:
-        - rm -rf ../.west
-        - west init -l .
-        - west update
-        - mkdir build && pushd build && cmake .. && make && popd
-        - ./scripts/check
-        - ./scripts/test
+        - ruby -v
+        - apt update &&
+          apt install -qy libgtest-dev
+        - mkdir build &&
+          cd build &&
+          cmake
+            -D"CMAKE_CXX_FLAGS=-g -O2 -w -fprofile-arcs -ftest-coverage"
+            -D"CMAKE_C_FLAGS=-g -O2 -w -fprofile-arcs -ftest-coverage" .. &&
+          make &&
+          make test &&
+          ctest -T Coverage &&
+          ../scripts/coverage
+          cpack &&
+          cd ..
