--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,19 +32,11 @@ jobs:
           lfs: true
     - name: Build everything
       run: |
-        rm -rf ../.west
-        west init -l .
-        west update
-        mkdir build && pushd build && cmake .. && make && popd
-        # make sure we have sdk exported into the environment
-        /opt/toolchains/zephyr-sdk-0.14.2/setup.sh -t all -h -c
-        west zephyr-export
-        ./scripts/check
-        ./scripts/test
+        ./scripts/init
+        ./scripts/build
     - name: Upload artifacts
       uses: actions/upload-artifact@v3
       with:
           name: package
           path: |
             build/*.deb
-
