--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -24,8 +24,8 @@ ABBREVIATE_BRIEF       = "The $name class" \
 ALWAYS_DETAILED_SEC    = NO
 INLINE_INHERITED_MEMB  = NO
 FULL_PATH_NAMES        = YES
-STRIP_FROM_PATH        = ${CMAKE_CURRENT_LIST_DIR}/include/
-STRIP_FROM_INC_PATH    = ${CMAKE_CURRENT_LIST_DIR}/include/
+STRIP_FROM_PATH        = ${CMAKE_SOURCE_DIR}/include/
+STRIP_FROM_INC_PATH    = ${CMAKE_SOURCE_DIR}/include/
 SHORT_NAMES            = NO
 JAVADOC_AUTOBRIEF      = NO
 JAVADOC_BANNER         = NO
@@ -36,7 +36,7 @@ SEPARATE_MEMBER_PAGES  = NO
 TAB_SIZE               = 4
 ALIASES                =
 TCL_SUBST              =
-OPTIMIZE_OUTPUT_FOR_C  = NO
+OPTIMIZE_OUTPUT_FOR_C  = YES
 OPTIMIZE_OUTPUT_JAVA   = NO
 OPTIMIZE_FOR_FORTRAN   = NO
 OPTIMIZE_OUTPUT_VHDL   = NO
