--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,69 +1,5 @@
-# SPDX-License-Identifier: Apache-2.0
-# Copyright 2022 Martin Schröder <info@swedishembedded.com>
-# This CMake file is for Zephyr use.
-if(CONFIG_CONTROL)
+file(GLOB_RECURSE SOURCES ./**/*.c)
 
-zephyr_include_directories(../include)
+add_library(control STATIC ${SOURCES})
 
-zephyr_library()
-zephyr_library_sources_ifdef(CONFIG_CONTROL optimization/linprog.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL misc/insert.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL misc/randn.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL misc/cut.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL misc/vmax.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL misc/stddev.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL misc/cat.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL misc/saturation.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL misc/mean.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL misc/sign.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL misc/print.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL misc/vmin.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL ai/Astar.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL ai/inpolygon.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL controller/mpc.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL controller/mrac.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL controller/lqi.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL controller/theta2ss.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL controller/kalman.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL controller/c2d.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL controller/stability.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL motion/motion_profile.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL filter/filtfilt.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL
-                             filter/sr_ukf_state_estimation.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL filter/mcs.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL
-                             linalg/linsolve_upper_triangular.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL linalg/linsolve_chol.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL linalg/expm.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL linalg/svd_golub_reinsch.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL linalg/pinv.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL linalg/linsolve_qr.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL linalg/eig_sym.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL linalg/mul.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL linalg/tran.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL linalg/nonlinsolve.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL
-                             linalg/linsolve_lower_triangular.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL linalg/qr.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL linalg/svd_jacobi_one_sided.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL linalg/sum.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL linalg/dlyap.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL linalg/balance.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL linalg/lup.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL linalg/linsolve_lup.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL linalg/eig.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL linalg/norm.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL linalg/linsolve_gauss.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL linalg/inv.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL linalg/det.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL linalg/cholupdate.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL linalg/chol.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL linalg/hankel.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL sysid/okid.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL sysid/era.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL sysid/rls.c)
-zephyr_library_sources_ifdef(CONFIG_CONTROL
-                             sysid/sr_ukf_parameter_estimation.c)
-
-endif()
+target_include_directories(control PUBLIC "${CMAKE_SOURCE_DIR}/include")
