--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,4 +33,6 @@ jobs:
     - name: Build everything
       run: |
         ./scripts/init
+        ./scripts/check
         ./scripts/build
+        ./scripts/test
