--- a/tests/motion/CMakeLists.txt
+++ b/tests/motion/CMakeLists.txt
@@ -1,4 +1,3 @@
 add_executable(MotionProfileTest src/MotionProfileTest.cpp)
 target_link_libraries(MotionProfileTest control gtest pthread)
-add_test(NAME MotionProfileTest
-         COMMAND MotionProfileTest)
+add_test(NAME MotionProfileTest COMMAND MotionProfileTest)
