Squashed commit of the following:
commit d80c2f73a17e76972ad5016b25ac917a6d9bb605
Author: Martin Schröder <info@swedishembedded.com>
Date:   Mon Aug 29 10:33:04 2022 +0200

    Delete files

    Signed-off-by: Martin Schröder <info@swedishembedded.com>

commit 62b17d654593a8f736c19f67f3cd578123205d76
Author: Martin Schröder <info@swedishembedded.com>
Date:   Mon Aug 29 10:21:56 2022 +0200

    Squashed commit of the following:

    commit faa131d09d5ff379680d96a4508a44664e73eff0
    Author: Martin Schröder <info@swedishembedded.com>
    Date:   Mon Aug 29 09:48:18 2022 +0200

        Update version

        Signed-off-by: Martin Schröder <info@swedishembedded.com>

    commit 1b90010f00a9df3a114aae60cedffbe19d3a5d65
    Merge: 83da2d8 1384ec9
    Author: Martin Schröder <info@swedishembedded.com>
    Date:   Mon Aug 29 09:46:17 2022 +0200

        Merge remote-tracking branch 'origin/main' into gh_release

        Signed-off-by: Martin Schröder <info@swedishembedded.com>

    commit 1384ec97f393a9fbf26d74407fcee6fe9c9e203b
    Author: Martin Schroeder <mkschreder.uk@googlemail.com>
    Date:   Sun Aug 28 21:40:34 2022 +0000

        Add DC motor model

        This adds a mathematically correct DC motor model with tests that can be used for instruments and control systems design and implementation (for example MRAC).

        Closes #14

        Signed-off-by: Martin Schröder <info@swedishembedded.com>

    commit 91059df21a8473dfd59a6bc2608ea94af756001c
    Author: Martin Schroeder <mkschreder.uk@googlemail.com>
    Date:   Sun Aug 28 10:27:21 2022 +0000

        Improvements to build system

        - Moved documentation build under doc folder
        - Added checkpatch and check compliance
        - Added spell check
        - Added consistent check/build/test workflow

        Closes #12

        Signed-off-by: Martin Schröder <info@swedishembedded.com>

    commit 5904cbc76acbd905c2a5f39e6c35bd4b6da9201a
    Author: Martin Schroeder <mkschreder.uk@googlemail.co

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,4 +21,6 @@ build:
         - if: $CI_PIPELINE_SOURCE == "merge_request_event"
     script:
         - ./scripts/init
+        - ./scripts/check
         - ./scripts/build
+        - ./scripts/test
