--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,9 @@ jobs:
     - name: Build everything
       run: |
         ./scripts/init
+        ./scripts/check
         ./scripts/build
+        ./scripts/test
     - name: Upload artifacts
       uses: actions/upload-artifact@v3
       with:
