Add pid controller to build
Signed-off-by: Martin Schröder <info@swedishembedded.com>

--- a/zephyr/CMakeLists.txt
+++ b/zephyr/CMakeLists.txt
@@ -26,6 +26,7 @@ if(CONFIG_CONTROL)
   zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/controller/theta2ss.c)
   zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/controller/kalman.c)
   zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/controller/c2d.c)
+  zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/controller/pid.c)
   zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/controller/stability.c)
   zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/motion/motion_profile.c)
   zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/filter/filtfilt.c)
