Add documentation for dynamics functions
- Cleaned up, documented and refactored dynamics functions
- More refactoring done as well because so much work needed to be done
- Added tests for all functions except theta2ss and mrac.

Signed-off-by: Martin Schröder <info@swedishembedded.com>

--- a/tests/motion/CMakeLists.txt
+++ b/tests/motion/CMakeLists.txt
@@ -1,3 +1,8 @@
+# SPDX-License-Identifier: Apache-2.0
+# Copyright (c) 2022 Martin Schröder <info@swedishembedded.com>
+# Consulting: https://swedishembedded.com/go
+# Training: https://swedishembedded.com/tag/training
+
 add_executable(MotionProfileTest src/MotionProfileTest.cpp)
 target_link_libraries(MotionProfileTest control gtest pthread)
 add_test(NAME MotionProfileTest COMMAND MotionProfileTest)
