--- a/.checkpatch.conf
+++ b/.checkpatch.conf
@@ -5,6 +5,7 @@
 --min-conf-desc-length=1
 --typedefsfile=scripts/checkpatch/typedefsfile
 
+--ignore SPDX_LICENSE_TAG
 --ignore LEADING_SPACE
 --ignore CONSTANT_COMPARISON
 --ignore TYPO_SPELLING
