--- a/tests/ai/testcase.yaml
+++ b/tests/ai/testcase.yaml
@@ -1,3 +1,8 @@
+# SPDX-License-Identifier: Apache-2.0
+# Copyright (c) 2022 Martin Schröder <info@swedishembedded.com>
+# Consulting: https://swedishembedded.com/go
+# Training: https://swedishembedded.com/tag/training
+
 tests:
   control.ai:
     platform_allow: native_posix
