Add documentation for dynamics functions
- Cleaned up, documented and refactored dynamics functions
- More refactoring done as well because so much work needed to be done
- Added tests for all functions except theta2ss and mrac.

Signed-off-by: Martin Schröder <info@swedishembedded.com>

--- a/zephyr/CMakeLists.txt
+++ b/zephyr/CMakeLists.txt
@@ -20,13 +20,14 @@ if(CONFIG_CONTROL)
   zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/misc/vmin.c)
   zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/ai/Astar.c)
   zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/ai/inpolygon.c)
-  zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/controller/mpc.c)
-  zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/controller/mrac.c)
-  zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/controller/lqi.c)
-  zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/controller/theta2ss.c)
-  zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/controller/kalman.c)
-  zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/controller/c2d.c)
-  zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/controller/stability.c)
+  zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/dynamics/mpc.c)
+  zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/dynamics/mrac.c)
+  zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/dynamics/lqi.c)
+  zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/dynamics/theta2ss.c)
+  zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/dynamics/kalman.c)
+  zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/dynamics/c2d.c)
+  zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/dynamics/pid.c)
+  zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/dynamics/stability.c)
   zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/motion/motion_profile.c)
   zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/filter/filtfilt.c)
   zephyr_library_sources_ifdef(CONFIG_CONTROL
@@ -34,6 +35,7 @@ if(CONFIG_CONTROL)
   zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/filter/mcs.c)
   zephyr_library_sources_ifdef(CONFIG_CONTROL
                                ../src/linalg/linsolve_upper_triangular.c)
+  zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/linalg/add.c)
   zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/linalg/linsolve_chol.c)
   zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/linalg/expm.c)
   zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/linalg/svd_golub_reinsch.c)
