Add clang-tidy static analysis
- Add build option for clang-tidy build
- Add clang-tidy executable finder
- Add clang-tidy utility function configure_tidy
- Add toolchain file for clang (mixing GCC or other compilers with
  clang-tidy is bound to break)
- Add initial .clang-tidy configuration
- Check target control using configure_tidy
- Add new files to CODEOWNERS

Example configuration command:
```
$ cmake -G Ninja \
    -DCMAKE_TOOLCHAIN_FILE $SOURCE_DIR/cmake/toolchain/clang.cmake \
    -DSECONTROL_CLANG_TIDY=ON \
    $SOURCE_DIR
```

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,11 @@ cmake_minimum_required(VERSION 3.12.2)
 
 project (control VERSION 0.34.0)
 
+list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
+include(configure_tidy)
 include(CTest)
+
+option(SECONTROL_CLANG_TIDY "Build with clang-tidy static analysis" OFF)
 
 add_subdirectory(doc)
 add_subdirectory(src)
