--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,3 +10,5 @@ add_library(control STATIC ${SOURCES})
 target_compile_options(control PRIVATE -Wall -Wextra -Werror -pedantic)
 
 target_include_directories(control PUBLIC "${CMAKE_SOURCE_DIR}/include")
+
+configure_tidy(control)
