Add clang-tidy checks to ci
Closes #22

Signed-off-by: Martin Schröder <info@swedishembedded.com>

--- a/.checkpatch.conf
+++ b/.checkpatch.conf
@@ -5,6 +5,8 @@
 --min-conf-desc-length=1
 --typedefsfile=scripts/checkpatch/typedefsfile
 
+--ignore LINE_SPACING
+--ignore DEEP_INDENTATION
 --ignore SPDX_LICENSE_TAG
 --ignore LEADING_SPACE
 --ignore CONSTANT_COMPARISON
