Add test assertions to era sysid
- Removed okid function for now. It was only computing markov parameters anyway.
- Renamed era to okid_era. It still doesn't compute kalman gain though and the algorithm does need to be reviewed.
- Added assertion to other sysid tests.

Closes #25

Signed-off-by: Martin Schröder <info@swedishembedded.com>

--- a/tests/linalg/CMakeLists.txt
+++ b/tests/linalg/CMakeLists.txt
@@ -18,6 +18,7 @@ target_sources(linalg PRIVATE hankel.cpp)
 target_sources(linalg PRIVATE inv.cpp)
 target_sources(linalg PRIVATE linsolve_chol.cpp)
 target_sources(linalg PRIVATE linsolve_gauss.cpp)
+target_sources(linalg PRIVATE linsolve_markov.cpp)
 target_sources(linalg PRIVATE linsolve_lower_triangular.cpp)
 target_sources(linalg PRIVATE linsolve_upper_triangular.cpp)
 target_sources(linalg PRIVATE linsolve_lup.cpp)
