--- a/zephyr/CMakeLists.txt
+++ b/zephyr/CMakeLists.txt
@@ -58,13 +58,13 @@ if(CONFIG_CONTROL)
   zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/linalg/eig.c)
   zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/linalg/norm.c)
   zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/linalg/linsolve_gauss.c)
+  zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/linalg/linsolve_markov.c)
   zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/linalg/inv.c)
   zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/linalg/det.c)
   zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/linalg/cholupdate.c)
   zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/linalg/chol.c)
   zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/linalg/hankel.c)
-  zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/sysid/okid.c)
-  zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/sysid/era.c)
+  zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/sysid/okid_era.c)
   zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/sysid/rls.c)
   zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/sysid/sqr_ukf_id.c)
 
