--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -14,3 +14,4 @@ add_subdirectory(linalg)
 add_subdirectory(dynamics)
 add_subdirectory(optimization)
 add_subdirectory(sysid)
+add_subdirectory(motor)
