--- a/zephyr/CMakeLists.txt
+++ b/zephyr/CMakeLists.txt
@@ -30,6 +30,8 @@ if(CONFIG_CONTROL)
   zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/dynamics/stability.c)
   zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/motion/motion_profile.c)
   zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/model/dc_motor.c)
+  zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/motor/park.c)
+  zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/motor/clarke.c)
   zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/filter/filtfilt.c)
   zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/filter/sqr_ukf.c)
   zephyr_library_sources_ifdef(CONFIG_CONTROL ../src/filter/mcs.c)
